Refactor backend, add historical support and favicon

--- a/ui.html
+++ b/ui.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>College Basketball Dashboard</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16.png">
   <style>
     :root{
       --bg: #ffffff;
