Added Conference Filtering Support

--- a/ui.html
+++ b/ui.html
@@ -36,6 +36,11 @@
           <option value="70">70+</option>
         </select>
 
+        <span class="muted" style="font-size:12px;">Filter</span>
+        <select id="confFilter" style="height:32px; padding:6px 10px; border-radius:10px;">
+          <option value="">All games</option>
+        </select>
+
         <button id="clearFilters" class="secondary" type="button"
                 style="height:32px; padding:6px 10px; border-radius:10px;">
           Clear
