AGO Filter Shift Bug Fix

--- a/ui.html
+++ b/ui.html
@@ -23,7 +23,7 @@
       <div class="muted" aria-live="polite" style="display:flex; gap:10px; align-items:center; flex-wrap:wrap;">
 
         <span>
-          Updated <strong><span id="updatedAgo">—</span></strong> ago
+          Updated <strong><span id="updatedAgo" class="updatedAgo">—</span></strong> ago
         </span>
 
         <span class="muted" style="opacity:.7;">·</span>
